--- a/OpenUI/src/app/forms/MainForm.fxml
+++ b/OpenUI/src/app/forms/MainForm.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <?import javafx.scene.*?><?import javafx.collections.*?><?import javafx.scene.layout.*?><?import javafx.scene.control.*?><?import javafx.scene.text.*?><?import javafx.scene.image.*?><?import javafx.scene.shape.*?><?import javafx.scene.paint.*?><?import javafx.scene.web.*?><?import javafx.geometry.*?><?import java.lang.*?><?import org.develnext.jphp.ext.javafx.classes.data.*?><?import org.develnext.jphp.ext.javafx.support.*?><?import org.develnext.jphp.ext.javafx.support.control.*?><?import org.develnext.jphp.ext.game.support.*?><AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" focusTraversable="false" id="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="248" prefWidth="656" styleClass="">
   <children>
+    <Rectangle arcHeight="11" arcWidth="11" fill="#cccccc" focusTraversable="false" height="232" id="rect" layoutX="8" layoutY="8" stroke="#334db3" strokeType="INSIDE" strokeWidth="0" styleClass="" width="640"/>
     <TextField alignment="CENTER_LEFT" editable="true" focusTraversable="true" id="edit" layoutX="16" layoutY="144" prefColumnCount="12" prefHeight="32" prefWidth="520" promptText="" styleClass="text-input text-field " text="">
       <font>
         <Font name="System Regular" size="12"/>
@@ -13,7 +14,7 @@
       </font>
     </Button>
     <Data cursor="DEFAULT" enabled="1" id="data-button" visible="1"/>
-    <TextArea editable="false" focusTraversable="true" id="textArea" layoutX="16" layoutY="16" prefColumnCount="40" prefHeight="120" prefWidth="624" promptText="" styleClass="text-input text-area " text="// Version 1.0.0.7&#10;✨ Added image extract&#10;&#128736; Added modules extract&#10;➕ Added thread" wrapText="true">
+    <TextArea editable="false" focusTraversable="true" id="textArea" layoutX="16" layoutY="16" prefColumnCount="40" prefHeight="120" prefWidth="624" promptText="idk" styleClass="text-input text-area " text="// Version 1.0.0.7&#10;✨ Added image extract&#10;&#128736; Added modules extract" wrapText="true">
       <font>
         <Font name="System Regular" size="12"/>
       </font>
@@ -25,21 +26,28 @@
       </font>
     </Button>
     <Data cursor="DEFAULT" enabled="1" id="data-buttonAlt" visible="1"/>
-    <CheckBox alignment="TOP_LEFT" contentDisplay="LEFT" ellipsisString="..." focusTraversable="true" graphicTextGap="4" id="checkbox" layoutX="16" layoutY="180" prefHeight="24" prefWidth="144" styleClass="check-box " text="jar?" textAlignment="LEFT" underline="true" wrapText="false">
+    <CheckBox alignment="TOP_LEFT" contentDisplay="LEFT" ellipsisString="..." focusTraversable="true" graphicTextGap="4" id="checkbox" layoutX="16" layoutY="180" prefHeight="24" prefWidth="56" styleClass="check-box " text="jar?" textAlignment="LEFT" underline="true" wrapText="false">
       <font>
         <Font name="System Bold" size="12"/>
       </font>
     </CheckBox>
     <Data cursor="DEFAULT" enabled="1" id="data-checkbox" visible="1"/>
-    <Panel backgroundColor="#31313157" borderColor="#55555569" borderRadius="8" borderStyle="SOLID" borderWidth="0" focusTraversable="false" id="panel" layoutX="8" layoutY="8" maxHeight="-1" maxWidth="-1" minHeight="-1" minWidth="-1" prefHeight="232" prefWidth="640" styleClass="" titleColor="#333333" titleOffset="15" titlePosition="TOP_LEFT">
+    <Data cursor="DEFAULT" enabled="1" id="data-panel" visible="1"/>
+    <CheckBox alignment="CENTER_LEFT" contentDisplay="LEFT" ellipsisString="..." focusTraversable="true" graphicTextGap="4" id="checkboxAlt" layoutX="88" layoutY="176" prefHeight="24" prefWidth="144" styleClass="check-box " text="Logs" textAlignment="LEFT" underline="true" wrapText="false">
+      <font>
+        <Font name="System Bold" size="12"/>
+      </font>
+    </CheckBox>
+    <Data cursor="DEFAULT" enabled="1" id="data-checkboxAlt" visible="1"/>
+    <Panel backgroundColor="#55555551" borderColor="#c0c0c0" borderRadius="7" borderStyle="SOLID" borderWidth="1" focusTraversable="false" id="panel" layoutX="8" layoutY="8" maxHeight="-1" maxWidth="-1" minHeight="-1" minWidth="-1" prefHeight="232" prefWidth="640" styleClass="" titleColor="#333333" titleOffset="15" titlePosition="TOP_LEFT">
       <children>
-        <com.jfoenix.controls.JFXSpinner focusTraversable="false" id="progressIndicator" layoutX="300" layoutY="97" prefHeight="72" prefWidth="136" progress="-1" radius="16" styleClass="progress-indicator jfx-spinner "/>
+        <com.jfoenix.controls.JFXSpinner focusTraversable="false" id="progressIndicator" layoutX="301" layoutY="97" prefHeight="184" prefWidth="368" progress="-1" radius="16" styleClass="progress-indicator jfx-spinner "/>
         <Data cursor="DEFAULT" enabled="1" id="data-progressIndicator" visible="1"/>
       </children>
       <titleFont>
         <Font name="System Regular" size="12"/>
       </titleFont>
     </Panel>
-    <Data cursor="DEFAULT" enabled="1" id="data-panel" visible="1"/>
+    <Data cursor="DEFAULT" enabled="1" id="data-rect" visible="1"/>
   </children>
 </AnchorPane>
